chore(test): ajout des test dans le shared + separation des tests d'intégration / unitaires

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -17,6 +17,12 @@
       {
         "allowModules": ["shared"]
       }
+    ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": ["**/*.test.ts", "**/*.spec.ts"]
+      }
     ]
   },
   "overrides": [
