--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "release:candidate": ".bin/product release:candidate",
     "postinstall": "husky",
     "talisman:add-exception": "yarn node-talisman --githook pre-commit -i",
-    "test": "vitest",
+    "test": "vitest --silent",
     "test:ci": "yarn test --run",
     "test:ci:coverage": "yarn test:ci --coverage.include='ui' --coverage.include='server/src' --coverage.provider='v8' --coverage.enabled --coverage.all --coverage.exclude='**/tests' --coverage.exclude='**/.next'",
     "test:watch": "vitest --watch",
