--- a/shared/package.json
+++ b/shared/package.json
@@ -12,7 +12,6 @@
     "npm": "please-use-yarn"
   },
   "scripts": {
-    "test": "jest",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -25,10 +24,9 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/he": "^1.2.3",
-    "@types/jest": "^29.5.1",
     "@types/node": "^22.5.5",
-    "jest": "^29.7.0",
     "typescript": "^5.6.3",
+    "vitest": "^2.1.3",
     "zod": "^3.23.8"
   }
 }
