--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "@sentry/cli": "^2.37.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "dotenv": "^16.4.5",
     "eslint-plugin-react": "^7.37.1",
     "global": "4.4.0",
