--- a/ui/package.json
+++ b/ui/package.json
@@ -64,13 +64,18 @@
   "devDependencies": {
     "@chakra-ui/cli": "^2.5.5",
     "@iconify/react": "^4.1.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.1.0",
     "@tsconfig/next": "^2.0.3",
     "@types/iframe-resizer": "^3.5.13",
     "@types/node": "^20.17.2",
     "@types/qs": "^6.9.16",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "dotenv": "^16.4.5",
-    "type-fest": "^4.26.1"
+    "jsdom": "^25.0.1",
+    "type-fest": "^4.26.1",
+    "vitest": "^2.1.3"
   }
 }
