--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -24,5 +24,5 @@
       "rootDir": "ui"
     }
   },
-  "ignorePatterns": ["next.config.js"]
+  "ignorePatterns": ["next.config.js", "vitest.config.js"]
 }
