--- a/ui/package.json
+++ b/ui/package.json
@@ -65,7 +65,9 @@
     "@chakra-ui/cli": "^2.5.5",
     "@iconify/react": "^4.1.1",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@tsconfig/next": "^2.0.3",
     "@types/iframe-resizer": "^3.5.13",
     "@types/node": "^20.17.2",
