chore(test): mise à jour des migrations lors des tests

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "migrations:latest": "yarn cli migrations:latest",
     "migrations:up": "yarn cli migrations:up",
     "migrations:create": "yarn cli migrations:create",
+    "migrations:down": "yarn cli migrations:down",
     "server:dev": "yarn workspace server dev",
     "ui:dev": "yarn workspace ui dev",
     "services:start": "docker compose up --remove-orphans -d --wait",
@@ -51,8 +52,8 @@
     "release:candidate": ".bin/product release:candidate",
     "postinstall": "husky",
     "talisman:add-exception": "yarn node-talisman --githook pre-commit -i",
-    "test": "vitest --silent",
-    "test:ci": "yarn test --run",
+    "test": "vitest",
+    "test:ci": "yarn test --run --silent",
     "test:ci:coverage": "yarn test:ci --coverage.include='ui' --coverage.include='server/src' --coverage.provider='v8' --coverage.enabled --coverage.all --coverage.exclude='**/tests' --coverage.exclude='**/.next'",
     "test:watch": "vitest --watch",
     "typecheck": "yarn foreach:parallel run typecheck",
