--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "semantic-release-slack-bot": "4.0.2",
     "typescript": "^5.6.3",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "vitest-canvas-mock": "^0.3.3"
   },
   "prettier": {
     "printWidth": 120,
