--- a/ui/package.json
+++ b/ui/package.json
@@ -62,7 +62,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@anatine/zod-mock": "^3.13.4",
     "@chakra-ui/cli": "^2.5.5",
+    "@faker-js/faker": "^9.3.0",
     "@iconify/react": "^4.1.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
