--- a/shared/package.json
+++ b/shared/package.json
@@ -22,6 +22,8 @@
     "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
+    "@anatine/zod-mock": "^3.13.4",
+    "@faker-js/faker": "^9.3.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/he": "^1.2.3",
     "@types/node": "^22.5.5",
