feat(ij): ajout de la création de fichier csv à partir des données IJ

--- a/package.json
+++ b/package.json
@@ -61,10 +61,9 @@
     "foreach:seq": "yarn workspaces foreach -Av --exclude orion",
     "foreach:parallel": "yarn foreach:seq -pi",
     "foreach:ci": "yarn foreach:seq -p",
-    "import": "yarn import:files && yarn import:tables && yarn import:ij && yarn import:formations",
+    "import": "yarn import:files && yarn import:tables && yarn import:formations",
     "import:files": "yarn cli importFiles",
     "import:tables": "yarn cli importTables",
-    "import:ij": "yarn cli importIJ",
     "import:formations": "yarn cli importFormations",
     "import:users": "yarn cli importUsers",
     "import:users:dryRun": "yarn cli importUsers --dryRun true",
