--- a/shared/package.json
+++ b/shared/package.json
@@ -18,7 +18,7 @@
     "axios": "^1.7.9",
     "he": "^1.2.0",
     "type-fest": "^4.26.1",
-    "zod": "^3.23.8",
+    "zod": "^3.24.1",
     "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
@@ -28,7 +28,6 @@
     "@types/he": "^1.2.3",
     "@types/node": "^22.5.5",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.3",
-    "zod": "^3.23.8"
+    "vitest": "^2.1.3"
   }
 }
