--- a/server/package.json
+++ b/server/package.json
@@ -51,7 +51,7 @@
     "env-var": "^7.5.0",
     "fastify": "^4.28.1",
     "fastify-qs": "^4.0.1",
-    "fastify-type-provider-zod": "^2.1.0",
+    "fastify-type-provider-zod": "4.0.2",
     "file-saver": "^2.0.5",
     "geolib": "^3.3.4",
     "glob": "^11.0.0",
@@ -80,7 +80,7 @@
     "uuid": "^9.0.1",
     "winston": "^3.10.0",
     "winston-transport": "^4.5.0",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@anatine/zod-mock": "^3.13.4",
