--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     shm_size: 1gb
     volumes:
       - pilotage_postgres_data:/var/lib/postgresql/data:z
-      - ./server/seed/seed_schema.dump:/seed_schema.dump
-      - ./server/seed/seed_data.dump:/seed_data.dump
+      - ./server/seed/seed_schema.dump:/seed_schema.dump:ro
+      - ./server/seed/seed_data.dump:/seed_data.dump:ro
     healthcheck:
       test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d postgres'"]
       interval: 10s
