--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,8 @@
   "compareFolders.ignoreWhiteSpaces": true,
   "compareFolders.respectGitIgnore": true,
   "eslint.useFlatConfig": false,
-  "eslint.options": { "overrideConfigFile": ".eslintrc.json" }
+  "eslint.options": { "overrideConfigFile": ".eslintrc.json" },
+  "[sql]": {
+    "editor.defaultFormatter": "ReneSaarsoo.sql-formatter-vsc"
+  }
 }
