feat: taux transfo cumule

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,5 +53,8 @@
   "compareFolders.ignoreEmptyLines": true,
   "compareFolders.ignoreWhiteSpaces": true,
   "compareFolders.respectGitIgnore": true,
-  "eslint.useFlatConfig": false
+  "eslint.useFlatConfig": false,
+  "[sql]": {
+    "editor.defaultFormatter": "ReneSaarsoo.sql-formatter-vsc"
+  }
 }
