--- a/server/package.json
+++ b/server/package.json
@@ -55,6 +55,7 @@
     "file-saver": "^2.0.5",
     "geolib": "^3.3.4",
     "glob": "^11.0.0",
+    "gray-matter": "^4.0.3",
     "injecti": "^1.0.5",
     "jschardet": "^3.1.3",
     "jsonwebtoken": "^9.0.2",
