--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "build": "tsup-node --env.NODE_ENV production",
     "typecheck": "NODE_OPTIONS='--max-old-space-size=8192' tsc --noEmit",
     "kysely": "npx kysely-codegen --schema public --out-file=./src/db/schema.ts --dialect postgres && yarn prettier:fix",
-    "generate:seed": "./seed/generate-seed.sh"
+    "generate:seed": "./seed/generate-seed.sh",
+    "clean:testdb": "./seed/clean-testdb.sh"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.574.0",
