feat(migration-men): ajout de l'env de qualification

--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -29,6 +29,14 @@ host_name={{product_name}}-recette-2
 env_type=recette
 env_name=recette2
 
+[qualification]
+91.134.19.45
+[qualification:vars]
+dns_name=qualification.{{domain_name}}.inserjeunes.incubateur.net
+host_name={{product_name}}-qualification
+env_type=recette
+env_name=qualification
+
 [local]
 localhost ansible_host=127.0.0.1 ansible_connection=local
 [local:vars]
