--- a/.github/workflows/_deploy.yml
+++ b/.github/workflows/_deploy.yml
@@ -10,6 +10,7 @@ on:
           - production
           - recette1
           - recette2
+          - qualification
       app_version:
         description: app version
         type: string
