chore(gh-uptime): ajout de l'env qualification

--- a/.github/workflows/_uptime.yml
+++ b/.github/workflows/_uptime.yml
@@ -10,6 +10,7 @@ on:
           - production
           - recette1
           - recette2
+          - qualification
   workflow_call:
     inputs:
       environment:
