--- a/.infra/docker-compose.production.yml
+++ b/.infra/docker-compose.production.yml
@@ -12,6 +12,7 @@ x-deploy-default: &deploy-default
     parallelism: 1
     delay: 10s
   restart_policy:
+    condition: on-failure
     window: 360s
     delay: 30s
     # Max 24hours
