--- a/.infra/docker-compose.recette.yml
+++ b/.infra/docker-compose.recette.yml
@@ -15,6 +15,7 @@ services:
         parallelism: 1
         delay: 10s
       restart_policy:
+        condition: on-failure
         window: 360s
         delay: 30s
         # Max 24hours
