feat(env): ajout de l'environnement de diffusion

--- a/.github/workflows/_uptime.yml
+++ b/.github/workflows/_uptime.yml
@@ -11,6 +11,7 @@ on:
           - recette1
           - recette2
           - qualification
+          - diffusion
   workflow_call:
     inputs:
       environment:
