--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -37,6 +37,14 @@ host_name={{product_name}}-qualification
 env_type=recette
 env_name=qualification
 
+[qualification]
+91.134.67.64
+[qualification:vars]
+dns_name=diffusion.{{domain_name}}.inserjeunes.incubateur.net
+host_name={{product_name}}-diffusion
+env_type=recette
+env_name=diffusion
+
 [local]
 localhost ansible_host=127.0.0.1 ansible_connection=local
 [local:vars]
