--- a/.github/workflows/_deploy.yml
+++ b/.github/workflows/_deploy.yml
@@ -11,6 +11,7 @@ on:
           - recette1
           - recette2
           - qualification
+          - diffusion
       app_version:
         description: app version
         type: string
