fix(env): ajout de diffusion comme public env possible & fix env.ini

--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -37,9 +37,9 @@ host_name={{product_name}}-qualification
 env_type=recette
 env_name=qualification
 
-[qualification]
+[diffusion]
 91.134.67.64
-[qualification:vars]
+[diffusion:vars]
 dns_name=diffusion.{{domain_name}}.inserjeunes.incubateur.net
 host_name={{product_name}}-diffusion
 env_type=recette
