feat(env): ajout de l'env de preproduction + cleanup du vault (notion, slack)

--- a/.github/workflows/_deploy.yml
+++ b/.github/workflows/_deploy.yml
@@ -12,6 +12,7 @@ on:
           - recette2
           - qualification
           - diffusion
+          - preproduction
       app_version:
         description: app version
         type: string
