--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -29,6 +29,12 @@ host_name={{product_name}}-recette-2
 env_type=recette
 env_name=recette2
 
+[local]
+localhost ansible_host=127.0.0.1 ansible_connection=local
+[local:vars]
+env_type=local
+env_name=local
+
 [qualification]
 141.94.156.140
 [qualification:vars]
@@ -45,8 +51,10 @@ host_name={{product_name}}-diffusion
 env_type=recette
 env_name=diffusion
 
-[local]
-localhost ansible_host=127.0.0.1 ansible_connection=local
-[local:vars]
-env_type=local
-env_name=local
+[preproduction]
+57.128.87.250
+[preproduction:vars]
+dns_name=preproduction.{{domain_name}}.inserjeunes.incubateur.net
+host_name={{product_name}}-preproduction
+env_type=recette
+env_name=preproduction
