fix(env): new dns_name & ui config for diffusion, qualification, preproduction

--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -38,7 +38,7 @@ env_name=local
 [qualification]
 141.94.156.140
 [qualification:vars]
-dns_name=qualification.{{domain_name}}.inserjeunes.incubateur.net
+dns_name=qa.{{domain_name}}.education.gouv.fr
 host_name={{product_name}}-qualification
 env_type=recette
 env_name=qualification
@@ -46,7 +46,7 @@ env_name=qualification
 [diffusion]
 91.134.67.64
 [diffusion:vars]
-dns_name=diffusion.{{domain_name}}.inserjeunes.incubateur.net
+dns_name=qp.{{domain_name}}.education.gouv.fr
 host_name={{product_name}}-diffusion
 env_type=recette
 env_name=diffusion
@@ -54,7 +54,7 @@ env_name=diffusion
 [preproduction]
 57.128.87.250
 [preproduction:vars]
-dns_name=preproduction.{{domain_name}}.inserjeunes.incubateur.net
+dns_name=pp.{{domain_name}}.education.gouv.fr
 host_name={{product_name}}-preproduction
 env_type=recette
 env_name=preproduction
