--- a/.github/workflows/_deploy.yml
+++ b/.github/workflows/_deploy.yml
@@ -7,12 +7,13 @@ on:
         type: choice
         required: true
         options:
-          - production
-          - recette1
-          - recette2
           - qualification
           - diffusion
           - preproduction
+          - production
+          - recette1
+          - recette2
+          - productionij
       app_version:
         description: app version
         type: string
