--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -5,30 +5,6 @@ repo_name=tjp-pilotage
 database_name=orion
 domain_name=orion
 
-[production]
-91.134.55.91
-[production:vars]
-dns_name={{domain_name}}.inserjeunes.beta.gouv.fr
-host_name={{product_name}}-production
-env_type=production
-env_name=production
-
-[recette1]
-91.134.6.195
-[recette1:vars]
-dns_name=recette-1.{{domain_name}}.inserjeunes.incubateur.net
-host_name={{product_name}}-recette-1
-env_type=recette
-env_name=recette1
-
-[recette2]
-91.134.19.45
-[recette2:vars]
-dns_name=recette-2.{{domain_name}}.inserjeunes.incubateur.net
-host_name={{product_name}}-recette-2
-env_type=recette
-env_name=recette2
-
 [local]
 localhost ansible_host=127.0.0.1 ansible_connection=local
 [local:vars]
@@ -58,3 +34,37 @@ dns_name=pp.{{domain_name}}.education.gouv.fr
 host_name={{product_name}}-preproduction
 env_type=recette
 env_name=preproduction
+
+[production]
+213.32.29.237
+[production:vars]
+dns_name={{domain_name}}.education.gouv.fr
+host_name={{product_name}}-production
+env_type=production
+env_name=production
+
+# old beta gouv config
+
+[productionij]
+91.134.55.91
+[productionij:vars]
+dns_name={{domain_name}}.inserjeunes.beta.gouv.fr
+host_name={{product_name}}-production
+env_type=production
+env_name=production
+
+[recette1]
+91.134.6.195
+[recette1:vars]
+dns_name=recette-1.{{domain_name}}.inserjeunes.incubateur.net
+host_name={{product_name}}-recette-1
+env_type=recette
+env_name=recette1
+
+[recette2]
+91.134.19.45
+[recette2:vars]
+dns_name=recette-2.{{domain_name}}.inserjeunes.incubateur.net
+host_name={{product_name}}-recette-2
+env_type=recette
+env_name=recette2
