--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -51,7 +51,7 @@ env_name=production
 dns_name={{domain_name}}.inserjeunes.beta.gouv.fr
 host_name={{product_name}}-production
 env_type=production
-env_name=production
+env_name=productionij
 
 [recette1]
 91.134.6.195
