--- a/.infra/docker-compose.all.yml
+++ b/.infra/docker-compose.all.yml
@@ -66,3 +66,19 @@ services:
         fluentd-address: localhost:24224
         tag: docker.txt.{{product_name}}.{{env_name}}.ui
         fluentd-async: "true"
+
+  reverse_proxy_documentation:
+    <<: *default
+    deploy:
+      <<: *deploy-default
+    image: nginx:alpine
+    volumes:
+      - ./documentation:/usr/share/nginx/html
+    environment:
+      - NGINX_HOST=localhost
+      - NGINX_PORT=80
+    expose:
+      - "80"
+    ports:
+      - "8080:80"
+
