--- a/.infra/files/configs/reverse_proxy/locations/60_documentation_support.conf.template
+++ b/.infra/files/configs/reverse_proxy/locations/60_documentation_support.conf.template
@@ -1,4 +1,3 @@
-location ~ ^/documentation(?:/(.*))?$ {
-    set $upstream http://reverse_proxy_documentation:3000;
-    include includes/proxy.conf;
+location /documentation/ {
+    proxy_pass http://documentation:80/documentation/;
 }
