--- a/.infra/ansible/tasks/files_copy.yml
+++ b/.infra/ansible/tasks/files_copy.yml
@@ -31,33 +31,44 @@
 # Documentation
 - name: Vérification de l'existence du dossier de la documentation
   ansible.builtin.stat:
-    path: /path/to/your/folder
+    path: /opt/app/data/documentation
   register: dir_check
 
-- name: Suppression du contenu du dossier de la documentation s'il existe
-  ansible.builtin.shell: rm -rf /path/to/your/folder/*
-  when: dir_check.stat.exists and folder_stat.stat.isdir
-
-- name: Création du dossier de la documentation s'il n'existe pas
-  ansible.builtin.file:
-    path: /path/to/your/folder
-    state: directory
-  when: not dir_check.stat.exists
+- name: Zip de la documentation
+  local_action:
+    module: archive
+    path: "{{ inventory_dir }}/../documentation/*"
+    dest: "{{ inventory_dir }}/../documentation.zip"
+    format: zip
+  become: false
 
 - name: Copie de la documentation produit
-  ansible.builtin.template:
-    src: "{{ item.src }}"
-    dest: "/opt/app/documentation/{{ item.path }}"
-    mode: "{{ item.mode }}"
-  with_filetree: "{{inventory_dir}}/../documentation"
-  when:
-    - item.state == 'file'
-    - item.path | basename != '.gitkeep'
-    - item.path | basename != '.DS_Store'
+  copy:
+    src: "{{ inventory_dir }}/../documentation.zip"
+    dest: /opt/app/data/documentation.zip
+
+- name: Unzip de la documentation
+  shell: "unzip /opt/app/data/documentation.zip -d /tmp/documentation"
+
+- name: Suppression du contenu du dossier de la documentation s'il existe
+  ansible.builtin.shell: rm -rf /opt/app/data/documentation/*
+  when: dir_check.stat.exists and dir_check.stat.isdir
+
+- name: Copie du contenu de la documentation vers le reverse proxy
+  shell: "cp -r /tmp/documentation/* /opt/app/data/documentation/"
+
+- name: Suppression du zip distant & de l'extraction
+  shell: "rm /opt/app/data/documentation.zip && rm -rf /tmp/documentation"
+  when: dir_check.stat.exists and dir_check.stat.isdir
+
+- name: Suppression du zip local
+  shell: "rm {{ inventory_dir }}/../documentation.zip"
+  delegate_to: localhost
+  become: false
 
 - name: Assignation des permissions au dossier de la doc pour www-data
   ansible.builtin.file:
-    path: /opt/app/documentation
+    path: /opt/app/data/documentation
     group: www-data
     recurse: yes
     state: directory
@@ -88,6 +99,9 @@
   with_fileglob:
     - "{{inventory_dir}}/.env_ui"
   when: env_type != 'preview'
+
+- name: cleanup des docker-compose
+  shell: "rm -f /opt/app/docker-compose.all.yml /opt/app/docker-compose.production.yml /opt/app/docker-compose.recette.yml"
 
 - name: copy du fichier docker compose
   ansible.builtin.template:
